--- a/src/main/resources/assets/allthedrops/lang/en_US.lang
+++ b/src/main/resources/assets/allthedrops/lang/en_US.lang
@@ -22,16 +22,16 @@ allthedrops.config.advanced.resourceblocks.tooltip=Forge OreDictionary names of 
 itemGroup.allthedrops=All the Drops
 
 item.allthedrops.devtool.name=Dev Tool
-item.allthedrops.bauble_shirt.all.name=Loot Tee
-item.allthedrops.bauble_shirt.all.info.0=Enables Additional Mob and Entity Drops
+item.allthedrops.bauble_shirt.all.name=Loot Tee (Entity/Block)
+item.allthedrops.bauble_shirt.all.info.0=Enables Additional Entity and Block Drops
 item.allthedrops.bauble_shirt.all.info.1=Does not Guarantee 100%% Drops
-item.allthedrops.bauble_shirt.all_100.name=Loot Tee
-item.allthedrops.bauble_shirt.all_100.info.0=Enables Additional Mob and Entity Drops
+item.allthedrops.bauble_shirt.all_100.name=Loot Tee (Entity/Block 100%)
+item.allthedrops.bauble_shirt.all_100.info.0=Enables Additional Entity and Block Drops
 item.allthedrops.bauble_shirt.all_100.info.1=100%% Drops
 item.allthedrops.bauble_shirt.entity.name=Entity Loot Tee
 item.allthedrops.bauble_shirt.entity.info.0=Enables Additional Entity Drops
 item.allthedrops.bauble_shirt.entity.info.1=Does not Guarantee 100%% Drops
-item.allthedrops.bauble_shirt.entity_100.name=Entity Loot Tee
+item.allthedrops.bauble_shirt.entity_100.name=Entity Loot Tee (100%)
 item.allthedrops.bauble_shirt.entity_100.info.0=Enables Additional Entity Drops
 item.allthedrops.bauble_shirt.entity_100.info.1=100%% Drops
 item.allthedrops.bauble_shirt.blocks.name=Block Loot Tee
